@@ -74,6 +74,11 @@ fi
 #
 if [ -z "$JVM_OPTS" ] ; then
     JVM_OPTS="-Xms1g -Xmx1g -server -XX:+AggressiveOpts"
+
+    # Hadoop needs class unloading enabled
+    if [ "GRIDGAIN_HADOOP_CLASSPATH" != "" ]; then
+        JVM_OPTS="$JVM_OPTS -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
+    fi
 fi
 
 #
